--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -1,22 +1,17 @@
-<header class="uq-header">
+<header class="uq-header" data-gtm-category="Header">
   <div class="uq-header__container">
     <div class="uq-header__menu-toggle">
       <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
     </div>
     <div class="uq-header__logo">
-      <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
+      <a class="logo--large" href="https://www.uq.edu.au/">
         <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
       </a>
     </div>
-    <div class="uq-header__search-toggle">
-      <button class="nav-primary__toggle nav-primary__search-toggle">
-         <div class="search-toggle__label">Search</div>
-      </button>
-    </div>
-    <div class="uq-header__nav-primary">
+    <div class="uq-header__nav-primary" data-gtm-category="Header navigation">
       <nav class="uq-header__nav-primary-container">
         <ul class="uq-header__nav-primary-list">
-          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
+          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/">Study</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="#" class="megamenu__overview-link">Study overview</a>
@@ -68,12 +63,11 @@
                       </ul>
                     </nav>
                   </div>
-                  
                 </div>
               </div>
           </div>
           </li>
-          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
+          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/">Research</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="#" class="megamenu__overview-link">Research overview</a>
@@ -114,7 +108,7 @@
               </div>
             </div>
           </li>
-          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
+          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships">Partners and Community</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
@@ -159,7 +153,7 @@
               </div>
             </div>
           </li>
-          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
+          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/">About</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="#" class="megamenu__overview-link">About overview</a>
@@ -184,7 +178,6 @@
                         <li><a href="#">Campuses, maps & transport</a></li>
                         <li><a href="#">Colleges and Accommodation</a></li>
                         <li><a href="#">Community Faciliites and Services</a></li>
-
                       </ul>
                     </nav>
                   </div>
@@ -204,8 +197,13 @@
         </ul>
       </nav>
     </div>
+    <div class="uq-header__search-toggle">
+      <button class="nav-primary__toggle nav-primary__search-toggle">
+         <div class="search-toggle__label">Search</div>
+      </button>
+    </div>
   </div>
-  <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
+  <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"  data-gtm-category="Header navigation mobile">
     <ul>
       <li class="uq-header__newglobal-nav-item">
         <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
@@ -213,30 +211,44 @@
           <li>
             <a href="#">Study overview</a>
           </li>
-          <li><a href="#">Find a course or program</a></li>
-          <li><a href="#">Browse study areas</a></li>
-          <li><a href="#">Why choose UQ</a></li>
-          <li><a href="#">Enriching student experience</a></li>
-          <li><a href="#">Study options & course types</a></li>
-          <li><a href="#">Scholarships</a></li>
-          <li><a href="#">Life at UQ & accommodation</a></li>
-          <li><a href="#">Starting university</a></li>
-          <li><a href="#">How to apply</a></li>
-          <li><a href="#">Campuses, maps & transport</a></li>
-          <li><a href="#">Events for prospective students</a></li>
-          
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Study options</a>
+            <ul>
+              <li><a href="#">Find a course or program</a></li>
+              <li><a href="#">Browse study areas</a></li>
+              <li><a href="#">Study options & course types</a></li>
+              <li><a href="#">How to apply</a></li>
+              <li><a href="#">Scholarships</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Discover UQ</a>
+            <ul>
+              <li><a href="#">Why choose UQ</a></li>
+              <li><a href="#">Enhance your employability</a></li>
+              <li><a href="#">Campuses, maps & transport</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Student life</a>
+            <ul>
+              <li><a href="#">Life at UQ and accommodation</a></li>
+              <li><a href="#">Extra student experiences</a></li>
+              <li><a href="#">Events for prospective students</a></li>
+              <li><a href="#">Starting university</a></li>
+            </ul>
+          </li>
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
             <ul>
               <li><a href="#">International students</a></li>
-              <li><a href="#">International agents</a></li>
               <li><a href="#">High school students</a></li>
               <li><a href="#">Non-school leavers</a></li>
               <li><a href="#">Postgraduate research (HDR) students</a></li>
               <li><a href="#">Aboriginal and Torres Strait Islander students</a></li>
               <li><a href="#">Study Abroad and Exchange students</a></li>
               <li><a href="#">Teachers and guidance counsellors</a></li>
-              <li><a href="#">Parents and Guardians</a></li>
+              <li><a href="#">Parents and guardians</a></li>
               <li><a href="#">Current students</a></li>
             </ul>
           </li>
@@ -248,24 +260,31 @@
           <li>
             <a href="#">Research overview</a>
           </li>
-          <li><a href="#">Explore UQ Research</a></li>
-          <li><a href="#">Research Excellence and Impact</a></li>
-          <li><a href="#">Faculties, Schools, Intitutues & Centres</a></li>
-          <li><a href="#">Research facilities</a></li>
-          <li><a href="#">Find a researcher or supervisor</a></li>
-          <li><a href="#">Research degrees and graduate students</a></li>
-          <li><a href="#">Research support, integrity and ethics</a></li>
-          <li><a href="#">Industry research collaboration</a></li>
-          <li><a href="#">Research communities and networks</a></li>
-          <li><a href="#">Participate in a research project</a></li>
+
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
+            <ul>
+              <li><a href="#">Research excellence and impact</a></li>
+              <li><a href="#">Research support, integrity and ethics</a></li>
+              <li><a href="#">Industry research collaboration</a></li>
+              <li><a href="#">Faculties, schools, intitutues & centres</a></li>
+              <li><a href="#">Find a researcher</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Research degrees</a>
+            <ul>
+              <li><a href="#">PhDs and research degrees</a></li>
+              <li><a href="#">Find a supervisor</a></li>
+            </ul>
+          </li>
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
             <ul>
               <li><a href="#">Future research students</a></li>
               <li><a href="#">New research students</a></li>
               <li><a href="#">Current research students</a></li>
-              <li><a href="#">Prospective research partners</a></li>
-              <li><a href="#">Research participants</a></li>
+              <li><a href="#">Prospective research students</a></li>
             </ul>
           </li>
         </ul>
@@ -276,23 +295,33 @@
           <li>
             <a href="#">Partners and community overview</a>
           </li>
-          <li><a href="#">Partners, Initiatives and Impact</a></li>
-          <li><a href="#">Research & Corporate Partnerships</a></li>
-          <li><a href="#">Alumni Community</a></li>
-          <li><a href="#">Work placements and Internships</a></li>
-          <li><a href="#">Teaching and Exchange Collaborations</a></li>
-          <li><a href="#">High school engagement</a></li>
-          <li><a href="#">Giving and philanthropy</a></li>
-          <li><a href="#">Sponsorship</a></li>
-          <li><a href="#">Commnity Engagement & Volunteering</a></li>
-          <li><a href="#">Indigenous Engagement</a></li>
-          <li><a href="#">Community Facilities and Services</a></li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
+            <ul>
+              <li><a href="#">Partners, initiatives and impact</a></li>
+              <li><a href="#">Research & Corporate Partnerships</a></li>
+              <li><a href="#">Work placements and Internships</a></li>
+              <li><a href="#">Teaching and Exchange Collaborations</a></li>
+              <li><a href="#">Sponsorship</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our communities</a>
+            <ul>
+              <li><a href="#">Alumni community</a></li>
+              <li><a href="#">Giving and philanthropy</a></li>
+              <li><a href="#">Indigenous engagement</a></li>
+              <li><a href="#">High school engagement</a></li>
+              <li><a href="#">Community engagement & volunteering</a></li>
+              <li><a href="#">Community facilities and services</a></li>
+            </ul>
+          </li>
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
             <ul>
-              <li><a href="#">Alumni</a></li>
               <li><a href="#">Donors</a></li>
               <li><a href="#">Business and industry</a></li>
+              <li><a href="#">Government</a></li>
               <li><a href="#">Media</a></li>
             </ul>
           </li>
@@ -304,17 +333,32 @@
           <li>
             <a href="#">About overview</a>
           </li>
-          <li><a href="#">Introducing UQ</a></li>
-          <li><a href="#">Vision, Values and Strategy</a></li>
-          <li><a href="#">Organisational Structure and Governance</a></li>
-          <li><a href="#">Teaching and Learning</a></li>
-          <li><a href="#">Campuses, maps and transport</a></li>
-          <li><a href="#">Faculties, Schools, Institutes and Centres</a></li>
-          <li><a href="#">Colleges and Accommodation</a></li>
-          <li><a href="#">Community Faciliites and Services</a></li>
-          <li><a href="#">Policies and Procedures</a></li>
-          <li><a href="#">Key initiatives</a></li>
-          <li><a href="#">Careers at UQ</a></li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our profile</a>
+            <ul>
+              <li><a href="#">Introducing UQ</a></li>
+              <li><a href="#">Vision, values and strategy</a></li>
+              <li><a href="#">Key initiatives</a></li>
+              <li><a href="#">Organisational structure and governance</a></li>
+              <li><a href="#">Policies and procedures</a></li>
+              <li><a href="#">Faculties, schools, institutes and centres</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Campuses and facilities</a>
+            <ul>
+              <li><a href="#">Campuses, maps & transport</a></li>
+              <li><a href="#">Colleges and Accommodation</a></li>
+              <li><a href="#">Community Faciliites and Services</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Excellence</a>
+            <ul>
+              <li><a href="#">Teaching and Learning</a></li>
+              <li><a href="#">Careers at UQ</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
       <li  class="uq-header__nav-secondary-item">
@@ -333,7 +377,7 @@
         <a class="uq-header__nav-secondary-link" href="#">Contact</a>
       </li>  
   </nav>
-  <div class="uq-header__search">
+  <div class="uq-header__search" data-gtm-category="Header search">
     <div class="uq-header__search-container">
       <form>
         <fieldset>
@@ -352,23 +396,21 @@
     <nav class="uq-header__nav-secondary-container">
       <ul class="uq-header__nav-secondary-list">
           <li class="uq-header__nav-secondary-item">
-            <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'home'});">UQ home</a>
+            <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">UQ home</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-              <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
+              <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">News</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-              <a href="https://www.uq.edu.au/events/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
+              <a href="https://www.uq.edu.au/events/" class="uq-header__nav-secondary-link">Events</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-              <a href="https://alumni.uq.edu.au/giving/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
+              <a href="https://alumni.uq.edu.au/giving/" class="uq-header__nav-secondary-link">Give</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-            <a href="https://uq.edu.au/departments/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
+            <a href="https://uq.edu.au/departments/" class="uq-header__nav-secondary-link">Contact</a>
           </li>
       </ul>
     </nav>
   </div>
-
-  
 </header>
